# house-price-prediction

./: .env  README.md  pyproject.toml
.github/workflows/: azure-ml-ci.yaml.disabled  local-run-ci.yaml  local-run-ci.yaml.disabled
data/: boston-houses-prices.csv
src/house_price_prediction/: __init__.py  azure-ml-run.py  train.py
